--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
-<!-- //////////////////////////////////////////////////////// ////////////////////////////////
+<!-- ////////////////////////////////////////////////////////////////////////////////////////
                                START SECTION 1 - THE NAVBAR SECTION  
 /////////////////////////////////////////////////////////////////////////////////////////////-->
 <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
@@ -187,11 +187,11 @@
         <div class="col-lg-7 col-md-6">
           <!--          
           <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>          
            -->
-           <a href="http://www.linkedin.com/in/henry-tong-05568a126"><i class="fab fa-linkedin"></i></a>
-           <a href="https://www.facebook.com/henry.tong.1232"><i class="fab fa-facebook"></i></a>
+           <a href="http://www.linkedin.com/in/henry-tong-05568a126" target="_blank" aria-label="Visit my LinkedIn page"><i class="fab fa-linkedin"></i></a>
+           <a href="https://www.facebook.com/henry.tong.1232" target="_blank" aria-label="Visit my facebook page"><i class="fab fa-facebook"></i></a>
+           <a href="https://github.com/henrytongv" target="_blank" aria-label="Visit my github page"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
