--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
       <div class="col-sm col-md-6">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Bible application for android</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Technology: Flutter</h6>
-            <p class="card-text">Free App to read the catholic latinamerican bible. Created with accessibility considerations so people with visual impairment can use it. It was also a fun way to learn about Flutter while creating an app that helps people.</p>
-            <a href="https://play.google.com/store/apps/details?id=org.maitelab.biblia_l" class="card-link">bible application at Google play store</a>
+            <h5 class="card-title">Talk: Accessibility for developers</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Technology: html</h6>
+            <p class="card-text">I gave a talk for software developers on how to create accessible websites. I was one of the 12 talks of an event about accessibility organized by the city of Córdoba, Argentina</p>
+            <a href="https://www.youtube.com/playlist?list=PLH7e_G46qhLvirqc9f4RsDdd3eFjB552U" class="card-link">youtube link to the event, my talk is number 10</a>
           </div>
         </div>
       </div>
@@ -160,6 +160,21 @@
           </div>
         </div>
       </div>
+
+
+
+
+      <div class="col-sm col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Bible application for android</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Technology: Flutter</h6>
+            <p class="card-text">Free App to read the catholic latinamerican bible. Created with accessibility considerations so people with visual impairment can use it. It was also a fun way to learn about Flutter while creating an app that helps people.</p>
+            <a href="https://play.google.com/store/apps/details?id=org.maitelab.biblia_l" class="card-link">bible application at Google play store</a>
+          </div>
+        </div>
+      </div>
+
             
     </div>
 
