--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 class="display-2">
           <span class="display-2--intro">Welcome to my personal web, I am Henry Tong</span></h1>
           <span class="display-2--description lh-base">
-            Senior Software Developer at <a href="https://patagonian.com/">Patagonian</a>. Software Architect at <a href="https://www.youtube.com/@VeronicaCoreInc">VeronicaCore</a>. I am also a volunteer IT Consultant at <a href="https://dalatcomunidad.org/">DALAT</a>
+            Senior Software Developer at <a href="https://patagonian.com/">Patagonian</a>. I am also a volunteer IT Consultant at <a href="https://dalatcomunidad.org/">DALAT</a>
           </span>
         
       </div>
@@ -204,8 +204,7 @@
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>          
            -->
-           <a href="http://www.linkedin.com/in/henry-tong-05568a126" target="_blank" aria-label="Visit my LinkedIn page"><i class="fab fa-linkedin"></i></a>
-           <a href="https://www.facebook.com/henry.tong.1232" target="_blank" aria-label="Visit my facebook page"><i class="fab fa-facebook"></i></a>
+           <a href="http://www.linkedin.com/in/henry-tong-info" target="_blank" aria-label="Visit my LinkedIn page"><i class="fab fa-linkedin"></i></a>
            <a href="https://github.com/henrytongv" target="_blank" aria-label="Visit my github page"><i class="fab fa-github"></i></a>
         </div>
       </div>
