--- a/index.html
+++ b/index.html
@@ -1,236 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Henry Tong</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.ico">
-</head>
-<body>
-<!-- ////////////////////////////////////////////////////////////////////////////////////////
-                               START SECTION 1 - THE NAVBAR SECTION  
-/////////////////////////////////////////////////////////////////////////////////////////////-->
-<nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="">
-        <img src="images/laptop_48px.png" alt="small image of a laptop">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#aboutme">About me</a></li>
-          <li class="nav-item"><a class="nav-link" href="#projects">Personal projects</a></li>
-          </li>
-        </ul>
+<!DOCTYPE HTML>
+<html lang="es">
+	<head>
+		<title>Henry Tong</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
-      </div>
-    </div>
-  </nav>
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a href="https://www.linkedin.com/in/henry-tong-info/" class="image avatar"><img src="images/avatar.jpg" alt="Foto de Henry Tong" /></a>
+					<h1>Hola, soy <strong>Henry Tong</strong>, Arquitecto de Software con más de 25 años de experiencia en proyectos de investigación, diseño y creación de software.</h1>
+				</div>
+			</header>
 
-<!-- /////////////////////////////////////////////////////////////////////////////////////////////////
-                            START SECTION 2 - THE INTRO SECTION  
-/////////////////////////////////////////////////////////////////////////////////////////////////////-->
+		<!-- Main -->
+			<div id="main">
 
-<section id="home" class="intro-section">
-  <div class="container">
-    <div class="row align-items-center text-white">
-      <!-- START THE CONTENT FOR THE INTRO  -->
-      <div class="col-md-6 intros text-start">
-        <h1 class="display-2">
-          <span class="display-2--intro">Welcome to my personal web, I am Henry Tong</span></h1>
-          <span class="display-2--description lh-base">
-            Senior Software Developer at <a href="https://patagonian.com/">Patagonian</a>. I am also a volunteer IT Consultant at <a href="https://dalatcomunidad.org/">DALAT</a>
-          </span>
-        
-      </div>
-      <!-- START THE CONTENT FOR THE VIDEO -->
-      <div class="col-md-6 intros text-end">
-        <div class="video-box">
-          <img src="images/arts/intro-section-illustration.png" alt="illustration of a software developer working with computers" class="img-fluid">
-        </div>
-      </div>
-    </div>
-  </div>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-</section>
+				<!-- One -->
+					<section id="one">
+						<header class="major">
+							<h2>Mis intereses</h2>
+						</header>
+						<p>Crear software que ayude a resolver problemas empresariales pero también sociales, aplicando lineamientos de accessilidad para que sea útil para todos. También me interesa la creación de videojuegos y explorar las posibilidades de la Web3.</p>
+					</section>
 
+				<!-- Two -->
+					<section id="two">
+						<h2>Charlas y proyectos</h2>
+						<ul>
+							<li>Consultor de IT en la <a href="https://www.linkedin.com/company/fundaciondalat/">Fundación DALAT</a>.</li>
+							<li>Ser uno de los jefes de la región Cuyo de la Sociedad Argentina de Inteligencia Artificial<a href="https://saia.ar/">SAIA</a>.</li>
+							<li>Instalación de una Blockchain de pruebas (Sandbox) en Oracle Cloud para difundir y capacitar en tecnologías Web3 en el grupo <a href="https://chat.whatsapp.com/I9xUZSTwj8X2rMZpP0cMan">web3Kuska</a> de la <a href="https://www.linkedin.com/company/comunidad-latam-ai/">Comunidad LATAM-AI</a>.</li>
+							<li>Charla: <a href="https://www.linkedin.com/posts/henry-tong-info_ya-se-acabó-tu-free-limittier-de-ia-activity-7250973721748803584-iZV0">Desarrollando IA con apoyo de la nube</a> acerca de "Serverless GPU" y "AI Models as a service".</li>
+							<li>Charla: <a href="https://www.youtube.com/watch?v=eJfJjeOkMas">Inteligencia Artificial e inclusión</a>.</li>
+							<li>Charla: Accesibilidad para programadores. Es la <a href="https://www.youtube.com/watch?v=teFlCvtn2mA&list=PLH7e_G46qhLvirqc9f4RsDdd3eFjB552U&index=10">Charla #10</a> del evento Navegación Accesible organizado por la ciudad de Córdoba.</li>
+							<li>Charla: <a href="https://www.youtube.com/watch?v=FYrGr-yBdqo">Accesibilidad en plataformas CMS</a>.</li>
+							<li>Charla: <a href="https://www.youtube.com/watch?v=KL2AIvDLF34">Introducción a Amazon AWS</a>.</li>
+							<li>App <a href="https://www.youtube.com/watch?v=KL2AIvDLF34">Biblia accesible Latinoamericana</a> para validar accesibilidad en una aplicación hecha en Flutter.</li>
+						  </ul>
+					</section>
  
+			</div>
 
-<!-- //////////////////////////////////////////////////////////////////////////////////////////////
-                         START SECTION 4 - THE SERVICES  
-///////////////////////////////////////////////////////////////////////////////////////////////////-->
-<section id="aboutme" class="services">
-  <div class="container">
-    <div class="row text-center">
-      <h2 class="display-3 fw-bold">About me</h2>
-      <div class="heading-line mb-1"></div>
-    </div>
- 
-  </div>
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/henry-tong-info/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/henrytongv" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:taksantong@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>Diseño <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
 
-  <!-- START THE CONTENT FOR THE SERVICES  -->
-  <div class="container">
- 
-    <!-- START THE WEB DEVELOPMENT CONTENT  -->
-    <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
-        <div class="services__pic">
-          <img src="images/services/service-2.png" alt="illustration of a software developer designing a web screen" class="img-fluid">
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
-        <div class="services__content">
- 
- 
-          <p class="lh-lg">
-            I am a software developer interested in tabletop games, video games, sci-fi and accessibility. I like to do experiments trying to combine them.
-          </p>
- 
-        </div>
-      </div>
-    </div>
- 
-  </div>
-</section>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
- 
-
-<!-- ///////////////////////////////////////////////////////////////////////////////////////////////////
-                              START SECTION 7 - THE PORTFOLIO  
-//////////////////////////////////////////////////////////////////////////////////////////////////////-->
-
-<section id="projects" class="portfolio">
-  <div class="container">
-    <div class="row text-center mt-5">
-      <h2 class="display-3 fw-bold text-capitalize">Personal projects</h2>
-      <div class="heading-line"></div>
-      <p class="lead">
-        Here are some of my notes and projects
-      </p>
-    </div>
-
-    <div class="row">
-      <div class="col-sm col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Talk: Accessibility for developers</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Technology: html</h6>
-            <p class="card-text">I gave a talk for software developers on how to create accessible websites. I was one of the 12 talks of an event about accessibility organized by the city of Córdoba, Argentina</p>
-            <a href="https://www.youtube.com/playlist?list=PLH7e_G46qhLvirqc9f4RsDdd3eFjB552U" class="card-link">youtube link to the event, my talk is number 10</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">DALAT's accessibility resources web</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Technology: Python mkdocs</h6>
-            <p class="card-text">Created an accessible html custom theme for mkdocs (it is a static site generator created in python) and collected accessibility resources in a web page.</p>
-            <a href="https://dalatgit.github.io" class="card-link">visit DALAT's accessibility resources web</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Talk about accessibility in CMS</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Technology: HTML, python</h6>
-            <p class="card-text">Created an accessible online and accessible slide presenter. It was a tool to convert markdown slides to html slides. Then used it to give a talk about accessibility in CMS.</p>
-            <a href="https://www.youtube.com/watch?v=FYrGr-yBdqo" class="card-link">view the talk about accessiblity in CMS in youtube</a>
-          </div>
-        </div>
-      </div>
- 
-      <div class="col-sm col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Talk about Amazon AWS</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Technology: AWS cloud</h6>
-            <p class="card-text">I sometimes give talks to teach or train about technology to other developers. Here is one I gave at Patagonian about AWS.</p>
-            <a href="https://www.youtube.com/watch?v=KL2AIvDLF34" class="card-link">view the talk Introduction to AWS</a>
-          </div>
-        </div>
-      </div>
-
-
-
-
-      <div class="col-sm col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Bible application for android</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Technology: Flutter</h6>
-            <p class="card-text">Free App to read the catholic latinamerican bible. Created with accessibility considerations so people with visual impairment can use it. It was also a fun way to learn about Flutter while creating an app that helps people.</p>
-            <a href="https://play.google.com/store/apps/details?id=org.maitelab.biblia_l" class="card-link">bible application at Google play store</a>
-          </div>
-        </div>
-      </div>
-
-            
-    </div>
-
-
-
- 
-  </div>
-</section>
-
- 
-
-<!-- ///////////////////////////////////////////////////////////////////////////////////////////
-                           START SECTION 9 - THE FOOTER  
-///////////////////////////////////////////////////////////////////////////////////////////////-->
-<footer class="footer">
-
-
-  <!-- START THE SOCIAL MEDIA CONTENT  -->
-  <div class="footer-sm" style="background-color: #212121;">
-    <div class="container">
-      <div class="row py-4 text-center text-white">
-        <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
-        Henry Tong
-        </div>
-        <div class="col-lg-7 col-md-6">
-          <!--          
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>          
-           -->
-           <a href="http://www.linkedin.com/in/henry-tong-info" target="_blank" aria-label="Visit my LinkedIn page"><i class="fab fa-linkedin"></i></a>
-           <a href="https://github.com/henrytongv" target="_blank" aria-label="Visit my github page"><i class="fab fa-github"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
-
- 
-
-  <!-- START THE COPYRIGHT INFO  -->
-  <div class="footer-bottom">
-    <div class="container">
-      <div class="row text-center text-white">
-        <div class="col-12">
-          <div class="footer-bottom__copyright">
-            Web design by <a href="https://github.com/MuriungiPatrick" target="_blank">Muriungi</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<!-- BACK TO TOP BUTTON  -->
-<a href="#" class="shadow btn-primary rounded-circle back-to-top">
-  <i class="fas fa-chevron-up"></i>
-</a>
-     <script src="assets/js/bootstrap.bundle.min.js"></script>
-</body>
+	</body>
 </html>
